Fixed more CSS, the service requests, spacing for map editor page, etc

--- a/src/main/resources/edu/wpi/cs3733/C23/teamD/views/tableCSS.css
+++ b/src/main/resources/edu/wpi/cs3733/C23/teamD/views/tableCSS.css
@@ -68,7 +68,6 @@
     -fx-text-background-color: white;
     -fx-border-radius: 10;
     -fx-border-color: transparent;
-    -fx-alignment: CENTER_BOTTOM;
 }
 
 .table-view .scroll-bar * {
@@ -115,10 +114,14 @@
 }
 
 .table-row-cell:focused {
+    -fx-alignment: center;
+    -fx-background-radius: 10;
+    -fx-background-color: #012D5A;
+    -fx-text-background-color: white;
     -fx-border-radius: 10;
-    -fx-border-width: 0;
     -fx-border-color: transparent;
-    -fx-background-color: transparent;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
 }
 
 .table-row-cell:selected {
