--- a/src/main/resources/edu/wpi/cs3733/C23/teamD/views/updatedStyleGuide.css
+++ b/src/main/resources/edu/wpi/cs3733/C23/teamD/views/updatedStyleGuide.css
@@ -51,6 +51,10 @@
     -fx-border-color: transparent;
 }
 
+.text-area .content:empty {
+    -fx-alignment: center ;
+}
+
 .text-area .content {
     -fx-border-color: #E4E1E6;
     -fx-background-color: #E4E1E6;
